battling scroll issues on ios , fuck you apple retards

--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -14,15 +14,15 @@
   background-color: $cl-darker-grey-blue;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
-  & {
-    -ms-overflow-style: none; /* for Internet Explorer, Edge */
-    scrollbar-width: none; /* for Firefox */
-    overflow-y: scroll;
-  }
+  // & {
+  //   -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  //   scrollbar-width: none; /* for Firefox */
+  //   overflow-y: scroll;
+  // }
 
-  &::-webkit-scrollbar {
-    display: none; /* for Chrome, Safari, and Opera */
-  }
+  // &::-webkit-scrollbar {
+  //   display: none; /* for Chrome, Safari, and Opera */
+  // }
 
   @include media('>=768px') {
     max-width: 617px;
