--- a/src/components/UserDetailsPage/UserDetailsPage.module.scss
+++ b/src/components/UserDetailsPage/UserDetailsPage.module.scss
@@ -11,7 +11,7 @@
   left: 0;
   row-gap: 16px;
   outline: 1px solid yellowgreen;
-  height: 100%;
+  height: calc(100% + 1px);
   width: 100%;
   background-color: $cl-darker-grey-blue;
 
@@ -20,6 +20,7 @@
   color: $cl-light-BG;
 
   overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 
   @include media('>=768px') {
     row-gap: 24px;
